# applificator

./: Main.hs  Parser.hs  README.md  Types.hs  applificator.cabal  example.txt  skify.cabal
