name:                applificator
version:             0.1.0.0
license:             BSD3
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
build-type:          Simple
cabal-version:       >=1.10

executable applificator
  main-is:             Main.hs
  other-modules:       Types, Parser
  default-extensions:  PatternSynonyms
  ghc-options:         -Werror -fwarn-incomplete-patterns
  build-depends:       base >=4.7 && <4.10
                     , parsec
  default-language:    Haskell2010
