name:                skify
version:             0.1.0.0
license-file:        LICENSE
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
build-type:          Simple
cabal-version:       >=1.10

executable skify
  main-is:             Main.hs
  other-extensions:    PatternSynonyms
  build-depends:       base >=4.7 && <4.10
  default-language:    Haskell2010
