name:                skify
version:             0.1.0.0
license-file:        LICENSE
author:              Maciej Bielecki
maintainer:          zyla@prati.pl
build-type:          Simple
cabal-version:       >=1.10

executable skify
  main-is:             Main.hs
  default-extensions:  PatternSynonyms
  ghc-options:         -Werror -fwarn-incomplete-patterns
  build-depends:       base >=4.7 && <4.10
                     , parsec
  default-language:    Haskell2010
